# dilemma

./: README.md  TODO.txt  pyproject.toml  simple_test.py
.github/workflows/: ci.yml  publish.yml
dilemma/: __init__.py  cli.py  compiled.py  dates.py  error_messages.py  errors.xml  exc.py  humanise.py  lang.py  logconf.py  lookup.py  path.py  typecheck.py  utils.py
dilemma/errors/: __init__.py  execution.py  messages.py  msg_templates.xml  parsing.py
dilemma/ext/: async.py  builder.py  cli.py
dilemma/resolvers/: interface.py  url_resolver.py
docs/: examples.md  language.md
examples/: main.py
src/dilemma/: arraymethods.py  lang.py  logconf.py  version.py
src/dilemma/errors/: __init__.py  messages.py  msg_templates.xml
src/dilemma/ext/: async.py  url_resolver.py
src/dilemma/resolvers/: __init__.py  basic_resolver.py  jq_resolver.py  jsonpath_resolver.py
tests/: test_array_functions.py  test_array_sugar.py  test_cli.py  test_compiled.py  test_containers.py  test_dates.py  test_errors.py  test_float.py  test_hypo.py  test_hypo_basic_maths.py  test_hypo_complex.py  test_hypo_parenthesis.py  test_lang.py  test_logical_ops.py  test_nested_variables.py  test_string_ops.py  test_variables.py
tests/examples/: 1-string_examples.yaml  2-maths_examples.yaml  3-date_examples.yaml  4-container_examples.yaml  5-nested_examples.yaml  6-jq_examples.yaml  7-error_examples.yaml  container_examples.yaml  date_examples.yaml  jq_examples.yaml  maths_examples.yaml  nested_examples.yaml  string_examples.yaml  test_examples.py
