[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "lark",
    "jq",
]
build-backend = "setuptools.build_meta"

[project]
name = "dilemma"
authors = [
    {name = "Patrick Dobbs", email = "patrick.dobbs@gmail.com"},
]
description = "This is an expression language python package."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
    "lark",
    "jq",
    "click",
    "pyyaml",
    "jsonpath-ng>=1.7.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "codecov",
    "coverage[toml]",  # Add this
    "pre-commit",
    "pyyaml",
    "hypothesis>=6.136.4",
]
doc = [
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings[python]",
    "mkdocs-material",
    "Pygments",
]
dev = [
    "click",
    "isort",
    "mypy",
    "pre-commit",
    "ruff",
    "types-PyYAML",
]
all = ["dilemma[test,doc,dev]"]

[project.scripts]
dilemma = "dilemma.ext.cli:cmd"

[tool.setuptools]
platforms = ["unix", "linux", "osx", "cygwin", "win32"]


[tool.setuptools.dynamic]
version = {attr = "dilemma.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dilemma*"]

[tool.pytest.ini_options]
minversion = "7.3"
testpaths = "tests"

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "setup.py",
    "src/dilemma/__init__.py",
    "src/dilemma/version.py",
    "src/dilemma/ext/*",  # Added to ignore the ext directory
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.coverage.paths]
source = [
    "src/dilemma/*",
]

[tool.coverage.html]
directory = "reports"

######## Tools


[tool.ruff]
target-version = "py312"
extend-exclude = ["docs", "test", "tests"]
line-length = 90

[tool.ruff.lint]
select = ["F", "E"]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = false
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
ignore-fully-untyped = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
# Platform configuration
python_version = "3.12"

[tool.uv.sources]
python-markdown-generator = { git = "https://github.com/Nicceboy/python-markdown-generator" }

[dependency-groups]
dev = [
    "python-markdown-generator",
]


